Reorganize frontend files

--- a/frontend/pages/table.html
+++ b/frontend/pages/table.html
@@ -1,13 +1,13 @@
 <div class="container-fluid">
-    <h3 class="text-dark mb-4">Train</h3>
+    <h3 id="table-title" class="text-dark mb-4"></h3>
     <div class="card shadow">
         <div class="card-header py-3">
             <p class="text-primary m-0 font-weight-bold" id="table_data_title"></p>
         </div>
         <div class="card-body">
             <div class="row mt-2" id="table_data_error" hidden="">
-                <div class="col">
-                    <label class="col-form-label text-center d-xl-flex justify-content-xl-center">
+                <div class="col-12">
+                    <label class="col-form-label d-flex justify-content-center text-center">
                         No data to be shown.<br>Please select a report item from Dashboard Reports History list.
                         <br>
                     </label>
@@ -17,3 +17,4 @@
         </div>
     </div>
 </div>
+<script src="/assets/js/table.js"></script>
