--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -22,6 +22,7 @@
 
 <body id="page-top">
     <div id="wrapper">
+        <div id="event-manager" class="d-none"></div>
         <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
             <div class="container-fluid d-flex flex-column p-0">
                 <ul class="navbar-nav text-light mt-5" id="accordionSidebar">
