--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico" />
     <title>Dashboard - Brand</title>
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gridjs/dist/theme/mermaid.min.css" />
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="/assets/css/buttons.css">
     <link rel="stylesheet" href="/assets/css/Contact-Form-Clean.css">
     <link rel="stylesheet" href="/assets/css/custom-design.css">
-    <link rel="stylesheet" href="/assets/css/Dark-Mode-Switch.css">
-    <link rel="stylesheet" href="/assets/css/Drag--Drop-Upload-Form.css">
-    <link rel="stylesheet" href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css">
+    <link rel="stylesheet" href="/assets/css/dark-mode-switch.css">
+    <link rel="stylesheet" href="/assets/css/drag-drop.css">
     <link rel="stylesheet" href="/assets/css/material-design-colors.css">
 </head>
 
@@ -26,7 +26,7 @@
         <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
             <div class="container-fluid d-flex flex-column p-0">
                 <ul class="navbar-nav text-light mt-5" id="accordionSidebar">
-                    <li class="nav-item"><a class="nav-link" href="/dashboard" data-link=""><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/dashboard" data-link=""><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/table_train" data-link=""><i class="fas fa-table"></i><span>Train Table</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/table_test" data-link=""><i class="fas fa-table"></i><span>Test Table</span></a></li>
                 </ul>
