Small statics fix

--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -48,7 +48,7 @@
                     <div class="row align-items-center no-gutters">
                         <div class="col mr-2">
                             <div class="text-uppercase text-info font-weight-bold text-xs mb-1"><span>Last report date<br><br></span></div>
-                            <div id="statics-last-report-date" class="text-dark font-weight-bold h5 mb-0"><span>18</span></div>
+                            <div id="statics-last-report-date" class="text-dark font-weight-bold h5 mb-0"><span></span></div>
                         </div>
                         <div class="col-auto"><i class="far fa-calendar fa-2x text-gray-300"></i></div>
                     </div>
