Small cosmetic changes

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -26,9 +26,9 @@
         <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
             <div class="container-fluid d-flex flex-column p-0">
                 <ul class="navbar-nav text-light mt-5" id="accordionSidebar">
-                    <li class="nav-item"><a class="nav-link active" href="/dashboard" data-link=""><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="/table_train" data-link=""><i class="fas fa-table"></i><span>Train Table</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="/table_test" data-link=""><i class="fas fa-table"></i><span>Test Table</span></a></li>
+                    <li class="nav-item py-1"><a class="nav-link active" href="/dashboard" data-link=""><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
+                    <li class="nav-item py-1"><a class="nav-link" href="/table_train" data-link=""><i class="fas fa-table"></i><span>Train Table</span></a></li>
+                    <li class="nav-item py-1"><a class="nav-link" href="/table_test" data-link=""><i class="fas fa-table"></i><span>Test Table</span></a></li>
                 </ul>
                 <div class="row my-4">
                     <div class="col text-center d-flex justify-content-xl-center p-3"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" class="d-xl-flex align-items-xl-center" style="font-size: 24px;margin-right: 8px;">
@@ -50,8 +50,8 @@
         </nav>
 
         <!-- Will be replaced by index.js -->
-        <div class="d-flex flex-column" id="content-wrapper">
-            <div id="content"></div>
+        <div id="content-wrapper" class="d-flex flex-column">
+            <div id="content" class="mb-5"></div>
         </div>
 
         <a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
