--- a/frontend/pages/table.html
+++ b/frontend/pages/table.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
     <h3 id="table-title" class="text-dark mb-4"></h3>
-    <div class="card shadow">
+    <div class="card shadow mb-4">
         <div class="card-header py-3">
             <p class="text-primary m-0 font-weight-bold" id="table_data_title"></p>
         </div>
         <div class="card-body">
-            <div class="row mt-2" id="table_data_error" hidden="">
+            <div class="row mt-0" id="table_data_error" hidden="">
                 <div class="col-12">
                     <label class="col-form-label d-flex justify-content-center text-center">
                         No data to be shown.<br>Please select a report item from Dashboard Reports History list.
@@ -13,7 +13,7 @@
                     </label>
                 </div>
             </div>
-            <div class="row table-responsive table mt-2 sort pagination paginationSummary" id="table_data" hidden=""></div>
+            <div class="row table-responsive table mt-0 mb-2 sort pagination paginationSummary" id="table_data" hidden=""></div>
         </div>
     </div>
 </div>
