--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -56,18 +56,9 @@
             </div>
         </div>
     </div>
+
     <div class="row">
-        <div class="col-lg-7 col-xl-8">
-            <div class="card shadow mb-4">
-                <div class="card-header d-flex justify-content-between align-items-center">
-                    <h6 class="text-primary font-weight-bold m-0">Train Properties Graph View</h6>
-                </div>
-                <div class="card-body">
-                    <div class="chart-area" style="color: var(--material-color-blue-300);"><canvas data-bss-chart="{&quot;type&quot;:&quot;line&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;Jan&quot;,&quot;Feb&quot;,&quot;Mar&quot;,&quot;Apr&quot;,&quot;May&quot;,&quot;Jun&quot;,&quot;Jul&quot;,&quot;Aug&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;Earnings&quot;,&quot;fill&quot;:true,&quot;data&quot;:[&quot;0&quot;,&quot;10000&quot;,&quot;5000&quot;,&quot;15000&quot;,&quot;10000&quot;,&quot;20000&quot;,&quot;15000&quot;,&quot;25000&quot;],&quot;backgroundColor&quot;:&quot;rgba(78, 115, 223, 0.05)&quot;,&quot;borderColor&quot;:&quot;rgba(78, 115, 223, 1)&quot;}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:false,&quot;legend&quot;:{&quot;display&quot;:false},&quot;title&quot;:{},&quot;scales&quot;:{&quot;xAxes&quot;:[{&quot;gridLines&quot;:{&quot;color&quot;:&quot;rgb(234, 236, 244)&quot;,&quot;zeroLineColor&quot;:&quot;rgb(234, 236, 244)&quot;,&quot;drawBorder&quot;:false,&quot;drawTicks&quot;:false,&quot;borderDash&quot;:[&quot;2&quot;],&quot;zeroLineBorderDash&quot;:[&quot;2&quot;],&quot;drawOnChartArea&quot;:false},&quot;ticks&quot;:{&quot;fontColor&quot;:&quot;#858796&quot;,&quot;padding&quot;:20}}],&quot;yAxes&quot;:[{&quot;gridLines&quot;:{&quot;color&quot;:&quot;rgb(234, 236, 244)&quot;,&quot;zeroLineColor&quot;:&quot;rgb(234, 236, 244)&quot;,&quot;drawBorder&quot;:false,&quot;drawTicks&quot;:false,&quot;borderDash&quot;:[&quot;2&quot;],&quot;zeroLineBorderDash&quot;:[&quot;2&quot;]},&quot;ticks&quot;:{&quot;fontColor&quot;:&quot;#858796&quot;,&quot;padding&quot;:20}}]}}}"></canvas></div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-5 col-xl-4">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
             <div class="card mb-4">
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <h6 class="text-primary font-weight-bold m-0">Send Data Request</h6>
@@ -136,10 +127,15 @@
                     </form>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col mb-4 col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
+            <div class="card shadow mb-4">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h6 class="text-primary font-weight-bold m-0">Explore Anomalies</h6>
+                </div>
+                <div class="card-body">
+                    <div id="columns-buttons-error"><label class="text-center justify-content-center d-flex" id="anomalies_pie_chart_error">No data to be shown.<br>Please select a Report item from list.<br></label></div>
+                    <div id="columns-buttons" class=""></div>
+                </div>
+            </div>
             <div class="card shadow mb-4">
                 <div class="card-header card-header d-flex justify-content-between align-items-center">
                     <h6 class="text-primary font-weight-bold m-0">Reports History</h6>
@@ -153,20 +149,36 @@
                 </div>
             </div>
         </div>
-        <div class="col mb-4 col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
             <div class="card shadow mb-4">
                 <div class="card-header d-flex justify-content-between align-items-center">
-                    <h6 class="text-primary font-weight-bold m-0">Explore Anomalies</h6>
+                    <h6 class="text-primary font-weight-bold m-0">Train Properties Graph View</h6>
                 </div>
                 <div class="card-body">
-                    <div id="columns-buttons-error"><label class="text-center justify-content-center d-flex" id="anomalies_pie_chart_error">No data to be shown.<br>Please select a Report item from list.<br></label></div>
-                    <div id="columns-buttons" class=""></div>
+                    <div id="charts-error">
+                        <label class="text-center justify-content-center d-flex" id="anomalies_pie_chart_error">
+                            No data to be shown.<br>Please select an anomaly pair from Explore Anomalies.<br>
+                        </label>
+                    </div>
+                    <div id="charts">
+                        <div class="chart-container">
+                            <canvas id="chartCol1" class="w-100 h-100"></canvas>
+                        </div>
+                        <div class="chart-container">
+                            <canvas id="chartCol2" class="w-100 h-100"></canvas>
+                        </div>
+                        <div class="chart-container">
+                            <canvas id="chartCorrelation" class="w-100 h-100"></canvas>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 <!-- iNSERT TO CODE -->
+<script src="/assets/js/chart.js"></script>
 <script src="/assets/js/formHandler.js"></script>
 <script src="/assets/js/dragAndDrop.js"></script>
+<script src="/assets/js/ChartCreator.js"></script>
 <script src="/assets/js/reportHistoryItem.js"></script>
