Fix graphs scaling

--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -162,13 +162,13 @@
                     </div>
                     <div id="charts">
                         <div class="chart-container">
-                            <canvas id="chartCol1" class="w-100 h-100"></canvas>
+                            <canvas id="chartCol1" class="w-100"></canvas>
                         </div>
                         <div class="chart-container">
-                            <canvas id="chartCol2" class="w-100 h-100"></canvas>
+                            <canvas id="chartCol2" class="w-100"></canvas>
                         </div>
                         <div class="chart-container">
-                            <canvas id="chartCorrelation" class="w-100 h-100"></canvas>
+                            <canvas id="chartCorrelation" class="w-100"></canvas>
                         </div>
                     </div>
                 </div>
