Add zoom, fix color problems

--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -162,10 +162,7 @@
                     </div>
                     <div id="charts">
                         <div class="chart-container">
-                            <canvas id="chartCol1" class="w-100"></canvas>
-                        </div>
-                        <div class="chart-container">
-                            <canvas id="chartCol2" class="w-100"></canvas>
+                            <canvas id="chartFeatures" class="w-100"></canvas>
                         </div>
                         <div class="chart-container">
                             <canvas id="chartCorrelation" class="w-100"></canvas>
@@ -177,7 +174,9 @@
     </div>
 </div>
 <!-- iNSERT TO CODE -->
+<script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
 <script src="/assets/js/chart.js"></script>
+<script src="/assets/js/chartjs-plugin-zoom.js"></script>
 <script src="/assets/js/formHandler.js"></script>
 <script src="/assets/js/dragAndDrop.js"></script>
 <script src="/assets/js/ChartCreator.js"></script>
