--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -131,9 +131,9 @@
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <h6 class="text-primary font-weight-bold m-0">Explore Anomalies</h6>
                 </div>
-                <div class="card-body">
-                    <div id="columns-buttons-error"><label class="text-center justify-content-center d-flex" id="anomalies_pie_chart_error">No data to be shown.<br>Please select a Report item from list.<br></label></div>
-                    <div id="columns-buttons" class=""></div>
+                <div id="columns-buttons-holder" class="card-body d-flex align-items-center justify-content-center">
+                    <div id="columns-buttons-error" class="align-middle"><label class="text-center justify-content-center d-flex" id="anomalies_pie_chart_error">No data to be shown.<br>Please select a Report item from list.<br></label></div>
+                    <div id="columns-buttons"></div>
                 </div>
             </div>
             <div class="card shadow mb-4">
