--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -1,137 +1,88 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico" />
     <title>Dashboard - Brand</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/gridjs/dist/theme/mermaid.min.css"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gridjs/dist/theme/mermaid.min.css" />
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/assets/fonts/fontawesome-all.min.css" />
     <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css" />
-    <link
-      rel="stylesheet"
-      href="/assets/fonts/fontawesome5-overrides.min.css"
-    />
+    <link rel="stylesheet" href="/assets/fonts/fontawesome5-overrides.min.css" />
     <link rel="stylesheet" href="/assets/css/buttons.css" />
     <link rel="stylesheet" href="/assets/css/Contact-Form-Clean.css" />
     <link rel="stylesheet" href="/assets/css/custom-design.css" />
     <link rel="stylesheet" href="/assets/css/dark-mode-switch.css" />
     <link rel="stylesheet" href="/assets/css/drag-drop.css" />
     <link rel="stylesheet" href="/assets/css/material-design-colors.css" />
-  </head>
+</head>
 
-  <body id="page-top">
+<body id="page-top">
     <div id="wrapper">
-      <div id="event-manager" class="d-none"></div>
-      <nav
-        class="
+        <div id="event-manager" class="d-none"></div>
+        <nav class="
           navbar navbar-dark
           align-items-start
           sidebar sidebar-dark
           accordion
           bg-gradient-primary
           p-0
-        "
-      >
-        <div class="container-fluid d-flex flex-column p-0">
-          <ul class="navbar-nav text-light mt-5" id="accordionSidebar">
-            <li class="nav-item py-1">
-              <a class="nav-link active" href="/dashboard" data-link=""
-                ><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a
-              >
-            </li>
-            <li class="nav-item py-1">
-              <a class="nav-link" href="/table_train" data-link=""
-                ><i class="fas fa-table"></i><span>Train Table</span></a
-              >
-            </li>
-            <li class="nav-item py-1">
-              <a class="nav-link" href="/table_test" data-link=""
-                ><i class="fas fa-table"></i><span>Test Table</span></a
-              >
-            </li>
-          </ul>
-          <div class="row my-4">
-            <div class="col text-center d-flex justify-content-xl-center p-3">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="1em"
-                height="1em"
-                viewBox="0 0 24 24"
-                fill="none"
-                class="d-xl-flex align-items-xl-center"
-                style="font-size: 24px; margin-right: 8px"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16ZM12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18Z"
-                  fill="currentColor"
-                ></path>
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M11 0H13V4.06189C12.6724 4.02104 12.3387 4 12 4C11.6613 4 11.3276 4.02104 11 4.06189V0ZM7.0943 5.68018L4.22173 2.80761L2.80752 4.22183L5.6801 7.09441C6.09071 6.56618 6.56608 6.0908 7.0943 5.68018ZM4.06189 11H0V13H4.06189C4.02104 12.6724 4 12.3387 4 12C4 11.6613 4.02104 11.3276 4.06189 11ZM5.6801 16.9056L2.80751 19.7782L4.22173 21.1924L7.0943 18.3198C6.56608 17.9092 6.09071 17.4338 5.6801 16.9056ZM11 19.9381V24H13V19.9381C12.6724 19.979 12.3387 20 12 20C11.6613 20 11.3276 19.979 11 19.9381ZM16.9056 18.3199L19.7781 21.1924L21.1923 19.7782L18.3198 16.9057C17.9092 17.4339 17.4338 17.9093 16.9056 18.3199ZM19.9381 13H24V11H19.9381C19.979 11.3276 20 11.6613 20 12C20 12.3387 19.979 12.6724 19.9381 13ZM18.3198 7.0943L21.1923 4.22183L19.7781 2.80762L16.9056 5.6801C17.4338 6.09071 17.9092 6.56608 18.3198 7.0943Z"
-                  fill="currentColor"
-                ></path>
-              </svg>
-              <div class="custom-control custom-switch">
-                <input
-                  class="custom-control-input"
-                  type="checkbox"
-                  id="darkSwitch"
-                />
-                <label class="custom-control-label" for="darkSwitch"></label>
-                <script src="/assets/js/Dark-Mode-Switch.js"></script>
-              </div>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="1em"
-                height="1em"
-                viewBox="0 0 24 24"
-                fill="none"
-                class="d-xl-flex align-items-xl-center"
-                style="font-size: 24px"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M12.2256 2.00253C9.59172 1.94346 6.93894 2.9189 4.92893 4.92891C1.02369 8.83415 1.02369 15.1658 4.92893 19.071C8.83418 22.9763 15.1658 22.9763 19.0711 19.071C21.0811 17.061 22.0565 14.4082 21.9975 11.7743C21.9796 10.9772 21.8669 10.1818 21.6595 9.40643C21.0933 9.9488 20.5078 10.4276 19.9163 10.8425C18.5649 11.7906 17.1826 12.4053 15.9301 12.6837C14.0241 13.1072 12.7156 12.7156 12 12C11.2844 11.2844 10.8928 9.97588 11.3163 8.0699C11.5947 6.81738 12.2094 5.43511 13.1575 4.08368C13.5724 3.49221 14.0512 2.90664 14.5935 2.34046C13.8182 2.13305 13.0228 2.02041 12.2256 2.00253ZM17.6569 17.6568C18.9081 16.4056 19.6582 14.8431 19.9072 13.2186C16.3611 15.2643 12.638 15.4664 10.5858 13.4142C8.53361 11.362 8.73568 7.63895 10.7814 4.09281C9.1569 4.34184 7.59434 5.09193 6.34315 6.34313C3.21895 9.46732 3.21895 14.5326 6.34315 17.6568C9.46734 20.781 14.5327 20.781 17.6569 17.6568Z"
-                  fill="currentColor"
-                ></path>
-              </svg>
+        ">
+            <div class="container-fluid d-flex flex-column p-0">
+                <ul class="navbar-nav text-light mt-5" id="accordionSidebar">
+                    <li class="nav-item py-1">
+                        <a class="nav-link" href="/dashboard" data-link=""><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a>
+                    </li>
+                    <li class="nav-item py-1">
+                        <a class="nav-link" href="/table_train" data-link=""><i class="fas fa-table"></i><span>Train Table</span></a>
+                    </li>
+                    <li class="nav-item py-1">
+                        <a class="nav-link" href="/table_test" data-link=""><i class="fas fa-table"></i><span>Test Table</span></a>
+                    </li>
+                </ul>
+                <div class="row my-4">
+                    <div class="col text-center d-flex justify-content-xl-center p-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" class="d-xl-flex align-items-xl-center" style="font-size: 24px; margin-right: 8px">
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16ZM12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18Z"
+                fill="currentColor"></path>
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M11 0H13V4.06189C12.6724 4.02104 12.3387 4 12 4C11.6613 4 11.3276 4.02104 11 4.06189V0ZM7.0943 5.68018L4.22173 2.80761L2.80752 4.22183L5.6801 7.09441C6.09071 6.56618 6.56608 6.0908 7.0943 5.68018ZM4.06189 11H0V13H4.06189C4.02104 12.6724 4 12.3387 4 12C4 11.6613 4.02104 11.3276 4.06189 11ZM5.6801 16.9056L2.80751 19.7782L4.22173 21.1924L7.0943 18.3198C6.56608 17.9092 6.09071 17.4338 5.6801 16.9056ZM11 19.9381V24H13V19.9381C12.6724 19.979 12.3387 20 12 20C11.6613 20 11.3276 19.979 11 19.9381ZM16.9056 18.3199L19.7781 21.1924L21.1923 19.7782L18.3198 16.9057C17.9092 17.4339 17.4338 17.9093 16.9056 18.3199ZM19.9381 13H24V11H19.9381C19.979 11.3276 20 11.6613 20 12C20 12.3387 19.979 12.6724 19.9381 13ZM18.3198 7.0943L21.1923 4.22183L19.7781 2.80762L16.9056 5.6801C17.4338 6.09071 17.9092 6.56608 18.3198 7.0943Z"
+                fill="currentColor"></path>
+            </svg>
+                        <div class="custom-control custom-switch">
+                            <input class="custom-control-input" type="checkbox" id="darkSwitch" />
+                            <label class="custom-control-label" for="darkSwitch"></label>
+                            <script src="/assets/js/Dark-Mode-Switch.js"></script>
+                        </div>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" class="d-xl-flex align-items-xl-center" style="font-size: 24px">
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M12.2256 2.00253C9.59172 1.94346 6.93894 2.9189 4.92893 4.92891C1.02369 8.83415 1.02369 15.1658 4.92893 19.071C8.83418 22.9763 15.1658 22.9763 19.0711 19.071C21.0811 17.061 22.0565 14.4082 21.9975 11.7743C21.9796 10.9772 21.8669 10.1818 21.6595 9.40643C21.0933 9.9488 20.5078 10.4276 19.9163 10.8425C18.5649 11.7906 17.1826 12.4053 15.9301 12.6837C14.0241 13.1072 12.7156 12.7156 12 12C11.2844 11.2844 10.8928 9.97588 11.3163 8.0699C11.5947 6.81738 12.2094 5.43511 13.1575 4.08368C13.5724 3.49221 14.0512 2.90664 14.5935 2.34046C13.8182 2.13305 13.0228 2.02041 12.2256 2.00253ZM17.6569 17.6568C18.9081 16.4056 19.6582 14.8431 19.9072 13.2186C16.3611 15.2643 12.638 15.4664 10.5858 13.4142C8.53361 11.362 8.73568 7.63895 10.7814 4.09281C9.1569 4.34184 7.59434 5.09193 6.34315 6.34313C3.21895 9.46732 3.21895 14.5326 6.34315 17.6568C9.46734 20.781 14.5327 20.781 17.6569 17.6568Z"
+                fill="currentColor"></path>
+            </svg>
+                    </div>
+                </div>
+                <div class="text-center d-none d-md-inline">
+                    <button class="btn rounded-circle border-0" id="sidebarToggle" type="button" style="color: var(--blue)"></button>
+                </div>
             </div>
-          </div>
-          <div class="text-center d-none d-md-inline">
-            <button
-              class="btn rounded-circle border-0"
-              id="sidebarToggle"
-              type="button"
-              style="color: var(--blue)"
-            ></button>
-          </div>
+        </nav>
+
+        <!-- Will be replaced by index.js -->
+        <div id="content-wrapper" class="d-flex flex-column">
+            <div id="content" class="mb-5"></div>
         </div>
-      </nav>
 
-      <!-- Will be replaced by index.js -->
-      <div id="content-wrapper" class="d-flex flex-column">
-        <div id="content" class="mb-5"></div>
-      </div>
-
-      <a class="border rounded d-inline scroll-to-top" href="#page-top"
-        ><i class="fas fa-angle-up"></i
-      ></a>
+        <a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
     <script src="/assets/js/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
@@ -141,5 +92,6 @@
     <script src="/assets/js/theme.js"></script>
     <script src="/assets/js/utilitiesFunctions.js"></script>
     <script type="module" src="/assets/js/index.js"></script>
-  </body>
+</body>
+
 </html>
