--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -176,10 +176,9 @@
         </div>
     </div>
 </div>
-<!-- iNSERT TO CODE -->
-<script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
-<script src="/assets/js/chart.js"></script>
-<script src="/assets/js/chartjs-plugin-zoom.js"></script>
+<script src="/assets/js/dist/hammerjs_2.0.8.js"></script>
+<script src="/assets/js/dist/chart.js"></script>
+<script src="/assets/js/dist/chartjs-plugin-zoom.js"></script>
 <script src="/assets/js/formHandler.js"></script>
 <script src="/assets/js/dragAndDrop.js"></script>
 <script src="/assets/js/ChartCreator.js"></script>
