Fix double reports problem

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -22,7 +22,6 @@
 
 <body id="page-top">
     <div id="wrapper">
-        <div id="event-manager" class="d-none"></div>
         <nav class="
           navbar navbar-dark
           align-items-start
@@ -92,6 +91,7 @@
     <script src="/assets/js/dist/bs-init.js"></script>
     <script src="/assets/js/dist/theme.js"></script>
     <script src="/assets/js/utilitiesFunctions.js"></script>
+    <script src="/assets/js/ChartCreator.js"></script>
     <script type="module" src="/assets/js/index.js"></script>
 </body>
 
